--- a/client/assets/style.css
+++ b/client/assets/style.css
@@ -1,13 +1,25 @@
 .left {float: left;}
 .right {float: right;}
 .pointer{cursor: pointer;}
+.hidden {display: none;}
 
 .navbar {
     font-size: 16px;
     padding: 0 .5rem;
+    color: wheat;
 }
 .navbar ul.nav li {
     text-align: center;
+}
+.page-header {
+    padding: 10px;
+}
+
+table.table {
+    font-size: 14px;
+}
+table.table a {
+    font-size: 22px;
 }
 
 .form_add_board form .form-group {
@@ -17,7 +29,18 @@
 .form_add_board form .form-group:nth-child(2) {
     margin: 6px;
 }
+.list-main .form-group {
+    padding: 0 7px;
+}
 .list-container .panel-heading h4 { text-align: center; }
+.panel-heading .panel-button i {
+    margin: 15px;
+}
+.panel-search input {
+    border: rgb(219, 211, 211) 1px solid;
+    /* border: none; */
+    box-shadow: gray 0 2px 3px ;
+}
 
 .appear { opacity: 0; transition:opacity 1.1s linear; }
 .appear.show { opacity: 1; }
@@ -28,3 +51,57 @@
 }
 .fade.in { opacity: 1; }
 .modal-backdrop.fade { opacity: 0.7; }
+
+.translate-enter {
+    opacity: 0;
+    transform: translateX(-250px);
+}
+.translate-enter.cards-enter-active {
+    opacity: 1;
+    transform: translateX(0);
+    transition: 0.3s;
+}
+.translate-leave {
+    opacity: 1;
+    transform: translateX(0);
+}
+.translate-leave.cards-leave-active {
+    opacity: 0;
+    transform: translateX(250px);
+    transition: 0.3s;
+}
+.translate-appear {
+    opacity: 0;
+    transform: translateX(-250px);
+}
+.translate-appear.cards-appear-active {
+    opacity: 1;
+    transform: translateX(0);
+    transition: .5s;
+}
+
+.toggle-enter {
+    max-height: 0;
+    overflow: hidden;
+}
+.toggle-enter.toggle-enter-active {
+    max-height: 300px;
+    overflow: hidden;
+    transition: max-height .25s ease-in;
+}
+.toggle-leave {
+    max-height: 300px;
+    overflow: hidden;
+}
+.toggle-leave.toggle-leave-active {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height .25s ease-out;
+}
+
+.priority_1 {
+    border: orange 1px solid;
+}
+.priority_2 {
+    border: orangered 1px solid;
+}
